docs: update supported image formats

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "gbc-image-transform"
 version = "0.1.0"
 edition = "2021"
-description = "Generate Game Boy Color lookalike images from a PNG image."
+description = "Generate Game Boy Color lookalike image from an image."
 
 [dependencies]
 # for easier error handling
