feat: add some logs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ image = "0.24.7"
 # for calculating reduced color palettes
 kmeans_colors = "0.6.0"
 palette = "0.7.3"
+tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
